# Master-thesis-code

./: README.md  depth_inference.py  environment.yml  mesh_utils.py  parallax_inpainting.py  renderDualPixels.py  renderParallax.py  renderSLIDEMesh.py  renderTexture.py  render_slide_circle.py  requirements.txt  test_sam.py  utilities.py
c_src/background_mesh_gen/: .fuse_hidden0000256600000008  CMakeLists.txt  background_faces_generator.py  background_mesh.cpp  background_verts_generator.py  run_cmake.sh  test_background_verts_gen.py
c_src/background_mesh_gen/back_verts/: back_verts.h  back_verts.registration.cpp
c_src/depth_enhance_gen/: CMakeLists.txt  DepthEnhance.cpp  run_cmake.sh  test_depth_enhance.py
c_src/foreground_mesh_gen/: CMakeLists.txt  ForegroundMeshFaces.cpp  ForegroundMeshVerts.cpp  foreground_mesh.cpp  foreground_pymodule.cpp  quadtree.hpp  quadtree_ext.cpp  run_cmake.sh  test_foreground_verts_gen.py
c_src/merge_gen/: CMakeLists.txt  MergeMeshFaces.cpp  MergeMeshVerts.cpp  merge_ext.cpp  merge_mesh.cpp  merge_pymodule.cpp  mesh_utils.py  run_cmake.sh  test_merge_gen.py
csgl/: mat4.py
shaders/: renderSLIDEFragmentShader.fragmentshader  renderSLIDEVertexShader.vertexshader  renderTextureFragmentShader.fragmentshader
